<resources>
    <string name="app_name">MuscleApp</string>
    <string name="login_title">Acceso</string>
    <string name="sign_up">Registro</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_pass">Contraseña</string>
    <string name="forgot_pass">¿Olvidaste la contraseña?</string>
    <string name="sign_in">Acceder</string>
    <string name="signup_residence">Lugar de residencia</string>
    <string name="signup_borndate">Fecha de nacimiento:</string>
    <string name="make_user">Crear usuario</string>
    <string name="add_session">Crear sesión de entrenamiento</string>
    <string name="name">Nombre</string>
    <string name="date">Fecha</string>
    <string name="create_session">Crear sesión</string>
    <string name="see">Ver</string>
    <string name="add_excersice_title">Crear ejercicio</string>
    <string name="muscle">Músculo</string>
    <string name="repetitions">Nº Repeticiones</string>
    <string name="series" translatable="false">Nº series</string>
    <string name="time">Tiempo</string>
    <string name="create_excersice">Crear ejercicio</string>
    <string name="no_elements">No hay elementos</string>
    <string name="comment">Comentarios</string>
    <string name="creation">Creación:</string>
    <string name="write_comment">Escribe un comentario</string>
    <string name="add_date">Añadir fecha</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_favourites">Sesiones favoritas</string>
    <string name="action_today">Sesiones de hoy</string>
    <string name="action_search_user">Buscar usuarios</string>
    <string name="action_setting">Ajustes</string>
    <string name="action_aboutus">Sobre nosotros</string>
    <string name="signup_name">Nombre del usuario</string>
    <string-array name="time_types">
        <item>segundos</item>
        <item>minutos</item>
    </string-array>

    <string name="training_dates">Fechas del entrenamiento</string>
    <string name="no_comments">Escribe el primer comentario</string>
    <string name="check_pass_dialog_title">Sesión privada</string>
    <string name="check_pass_dialog_message">Introduce la contraseña de </string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="upload_ok">Subido con exito</string>
    <string name="see_video">Ver vídeo</string>
    <string name="other">Otras opciones</string>
    <string name="downloading">Descargando ...</string>
    <string name="video_player" translatable="false">videoPlayer</string>
    <string name="no_video">No tiene video </string>
    <string name="set_remember">Recordar usuario</string>
    <string name="set_description_remember">Mantiene la sesion abierta</string>
    <string name="access">¡Has accedido a MuscleApp!</string>
    <string name="conecting">Contectando...</string>
    <string name="activate">Activa tu usuario</string>
    <string name="recovery_pass_title">Recuperar contraseña</string>
    <string name="recovery_pass_message">Introduce tu correo electrónico</string>
    <string name="autentication">Autenticando...</string>
    <string name="creating">Creando session de entrenamiento...</string>
    <string name="loading_session">Cargando sesión de entrenamiento</string>
    <string name="years">años</string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="err_no_favourites">No sigues ninguna sesión</string>
    <string name="err_no_today">No tienes entrenamientos</string>
    <string name="noProfileSession">No hay sesiones</string>
    <string name="remove_favourite_title">Borrar de favoritos</string>
    <string name="remove_favourite_message">¿Deseas borrar la sesión de favoritos?</string>
    <string name="remove_session_title">Borrar session de entrenamiento</string>
    <string name="remove_session_message">¿Deseas borrar la sesión de entrenamiento?</string>
</resources>
