<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.linux.muscleapp.SignUpActivity"
    android:layout_margin="@dimen/activity_margin">
    <TextView
        android:id="@+id/txvSignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_titlelogin"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvSignUpTitle"
        >
        <EditText
            android:id="@+id/edtSingupEmail"
            android:hint="@string/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilSignupEmail"
        >
        <EditText
            android:id="@+id/edtSingupPass"
            android:hint="@string/login_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupResidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilSignupPass"
        android:layout_marginBottom="@dimen/margin_tillogin"
        >
        <EditText
            android:id="@+id/edtSingupResidence"
            android:hint="@string/signup_residence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txvSignUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilSignupResidence"
        android:text="@string/signup_borndate"/>
    <TextView
        android:id="@+id/txvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txvSignUpDate"
        android:layout_alignBaseline="@id/txvSignUpDate"
        />
    <ImageView
        android:id="@+id/imgSignUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvSignUpDate"
        android:src="@mipmap/ic_datepicker"/>

    <Button
        android:id="@+id/btnSignUpCreateUser"
        android:layout_width="@dimen/btnlogin_width"
        android:layout_height="wrap_content"
        style="@style/Widget.Button.Transparent"
        android:text="@string/make_user"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/btnlogin_margin"
        />


</RelativeLayout>
