<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.linux.muscleapp.ui.login.LogInActivity"
    android:padding="@dimen/activity_padding"
    android:id="@+id/android.R.id.content"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/tilLoginPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splashimage" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:hintTextAppearance="@style/EditTextLoginTheme"
        >

        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_email"
            android:textColor="@android:color/white"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_tillogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLoginEmail"
        app:hintTextAppearance="@style/EditTextLoginTheme"
        app:errorEnabled="true"
        >
        <EditText
            android:id="@+id/edtLoginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            android:textColor="@android:color/white"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txvLoginForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_tillogin"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPass" />
    <TextView
        android:id="@+id/txvLoginSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_tillogin"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPass"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"/>

    <Button
        android:id="@+id/btnLoginSignIn"
        android:layout_width="@dimen/btnlogin_width"
        android:layout_height="wrap_content"
        style="@style/Widget.Button.Transparent"
        android:text="@string/sign_in"
        android:background="@drawable/btnlogin_shape"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/btnlogin_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>
