<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/android.R.id.content"
    tools:context="com.example.linux.muscleapp.ui.signup.SignUpActivity"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@android:color/white"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_titlelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/edtSingupEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSignupEmail"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/edtSingupPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSignupPass"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/edtSingupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/signup_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSignupResidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSignupName"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/edtSingupResidence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/signup_residence" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txvSignUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup_borndate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSignupResidence" />
    <TextView
        android:id="@+id/txvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/txvSignUpDate"
        app:layout_constraintStart_toEndOf="@id/txvSignUpDate"
        android:layout_margin="4dp"/>

    <ImageView
        android:id="@+id/imgSignUpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@mipmap/ic_datepicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvSignUpDate" />

    <Button
        android:id="@+id/btnSignUpCreateUser"
        android:layout_width="@dimen/btnlogin_width"
        android:layout_height="wrap_content"
        style="@style/Widget.Button.Transparent"
        android:text="@string/make_user"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/btnlogin_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>

